30-08-2024/code.txt
mongosh
Current Mongosh Log ID: 66d14267fc0625063446b798
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5
Using MongoDB:          7.0.14
Using Mongosh:          2.2.5
mongosh 2.3.0 is available for download: https://www.mongodb.com/try/download/shell

For mongosh info see: https://docs.mongodb.com/mongodb-shell/

------
   The server generated these startup warnings when booting
   2024-08-28T10:05:41.171+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> use chitkara
switched to db chitkara
chitkara> db.user.countDocuments()
7
chitkara> db.user.estimatedDocuments()
TypeError: db.user.estimatedDocuments is not a function
chitkara> db.user.estimatedDocument()
TypeError: db.user.estimatedDocument is not a function
chitkara> db.user.estimatedDocumentCount()
7
chitkara> db.students.updateMany({$set: {subject: "DataScience"}
... db.students.updateMany({$set: {subject: "DataScience"})
Uncaught:
SyntaxError: Unexpected token, expected "," (2:0)

  1 | db.students.updateMany({$set: {subject: "DataScience"}
> 2 | db.students.updateMany({$set: {subject: "DataScience"})
    | ^
  3 |

chitkara> db.students.updateMany({$set: {subject: "DataScience"})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:54)

> 1 | db.students.updateMany({$set: {subject: "DataScience"})
    |                                                       ^
  2 |

chitkara> db.students.updateMany({}, { $set: { subject: "DataScience" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 5,
  modifiedCount: 5,
  upsertedCount: 0
}
chitkara>

chitkara> db.students.updateMany({}, { $set: { address: "Chitkara University" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 5,
  modifiedCount: 5,
  upsertedCount: 0
}
chitkara> db.students.updateMany({name:"Aaron"}, { $set: { grade: "A" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
chitkara> db.students.updateMany({name:"Ava"}, { $set: { grade: "B+" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
chitkara> db.students.updateMany({name:"Pip"}, { $set: { grade: "A+" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
chitkara> db.students.updateMany({name:"Cami"}, { $set: { grade: "B" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
chitkara> db.students.updateOne({name:"Jack"}, { $set: { grade: "B" } })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}